--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   # AI/ML
   google_generative_ai: ^0.2.0
   image_picker: ^1.0.4
-  image_cropper: ^5.0.0
+  # image_cropper: ^5.0.1  # Temporarily disabled due to web compatibility issues
   flutter_image_compress: ^2.1.0
   
   # Networking
@@ -94,6 +94,9 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   build_runner: ^2.4.7
   hive_generator: ^2.0.1
+
+# dependency_overrides:
+  # Removed - image_cropper temporarily disabled for web compatibility
 
 flutter:
   uses-material-design: true
