--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_analytics: ^10.7.0
   firebase_crashlytics: ^3.4.0
   firebase_performance: ^0.9.3
+  google_sign_in: ^6.2.1
   
   # State Management
   provider: ^6.1.0
