--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   crypto: ^3.0.3
   webview_flutter: ^4.4.4
   cupertino_icons: ^1.0.2
+  flutter_map_cancellable_tile_provider: ^2.0.0
 
 dev_dependencies:
   flutter_test:
