--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,5 @@
 arb-dir: lib/l10n
+output-dir: lib/generated
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
-
+output-class: AppLocalizations
