--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_crashlytics: ^3.4.0
   firebase_performance: ^0.9.3
   google_sign_in: ^6.2.1
+  cloud_functions: ^4.4.0
   
   # State Management
   provider: ^6.1.0
