--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   uuid: ^4.2.2
   crypto: ^3.0.3
   webview_flutter: ^4.4.4
+  webview_windows: ^0.4.0
   cupertino_icons: ^1.0.2
   flutter_map_cancellable_tile_provider: ^2.0.0
 
