--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,8 @@ dev_dependencies:
   build_runner: ^2.4.7
   hive_generator: ^2.0.1
   flutter_arb_translator: ^1.0.3
+  integration_test:
+    sdk: flutter
 
 # dependency_overrides:
   # Removed - image_cropper temporarily disabled for web compatibility
